<?xml version="1.0"?>
<package format="2">
  <name>bug_navigation</name>
  <version>0.0.0</version>
  <description>The bug navigation package</description>

  <maintainer email="damjan@todo.todo">damjan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
</package>
