<?xml version="1.0"?>
<package format="2">
  <name>navigation_world</name>
  <version>1.0.0</version>
  <description>A Gazebo world for testing autonomous navigation.</description>

  <maintainer email="damjan@romb-technologies.hr">damjan</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>diff_description</exec_depend>
</package>
